--- a/Untitled5.ipynb
+++ b/Untitled5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNA0Xo9rqoEs8zN3xyPiVkp",
+      "authorship_tag": "ABX9TyNxHLDpDFh/dXw9zokyfn3E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,18 @@
       "metadata": {
         "id": "IFAzV77eIPva"
       },
-      "execution_count": 1,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from bs4 import BeautifulSoup"
+      ],
+      "metadata": {
+        "id": "Tn6IzbDWOurz"
+      },
+      "execution_count": 2,
       "outputs": []
     }
   ]
